intro almost done

--- a/main.tex
+++ b/main.tex
@@ -74,7 +74,7 @@ However, in a replication of this experiment \citeA{kononowicz_slow_2011} failed
 More recently, the power of neuronal oscillations in the beta band was found to be another measure that is predictive of the length of produced intervals.
 
 \citeA{jenkinson_new_2011} suggested that beta power in the basal ganglia provides an index of the likelihood that a voluntary movement will be required, with a low beta power indicating a high probability.
-Indeed, \citeA{joundi_driving_2012} found that in a task where participants were instructed to tap along with an external rhythm, beta power was lower during the tapping.
+Indeed, \citeA{joundi_persistent_2013} found that in a task where participants were instructed to tap along with an external rhythm, beta power was lower during the tapping.
 Furthermore, they found that with high tapping rates, beta activity could not fully resynchronize between taps.
 
 Along similar lines, \citeA{bartolo_information_2014} used beta power to predict the interval length in a synchronization-continuation tapping task performed on monkeys.
@@ -90,19 +90,23 @@ In another area of the field of timing, a large body of research exists that lin
 When participants come to expect the trigger stimulus after a specific time interval, deviations from this interval lead to predictable changes in reaction time.
 For example, \citeA{grosjean_timing_2001} found that when the stimulus appears earlier than expected, reaction times will be slower.
 Conversely, when it appears later than expected, reaction times will be faster.
-An obvious explanation for this effect is that participants build up the readiness to react towards the point in time when they expect the stimulus to occur.
+A simple explanation for this effect is that participants build up the readiness to react towards the point in time when they expect the stimulus to occur.
 When it appears before they expect it, they are less ready to respond to it, and thus slower.
 However, when it appears later than anticipated, the readiness is very high and the reaction comes faster.
 
+These findings clearly show that timing plays a role in reaction time tasks, in that participants implicitly use their sense of time to predict when the stimulus will occur.
+
 % This study
 The purpose of the present study is to investigate the link between beta power, interval timing, and reaction time.
-As beta power has been found to increase the length of estimated time intervals \cite<e.g.>{kononowicz_beta_2014}, and interval timing has been shown to play a role in reaction time tasks via expectancy effects \cite<e.g.>{grosjean_timing_2001}, we hypothesise in the present study that beta power can be used to predict the expectancy, and hence the response speed, in a reaction time task.
+As beta power has been found to increase the length of estimated time intervals \cite<e.g.>{kononowicz_beta_2014}, and interval timing has been shown to play a role in reaction time tasks via expectancy effects \cite<e.g.>{grosjean_timing_2001}, we hypothesise that beta power can be used to predict the expectancy, and hence the response speed, in a reaction time task.
 
 To assess this hypothesis, we performed a simple reaction time task in which participants initiated each trial themselves by pressing a key.
 Beta power was measured during the first second of each trial.
-The trigger stimulus always occured after a fixed time from the start of the trial during the first 150 trials, in order for subjects to come to expect the stimulus after this interval. In the last 250 trials, the interval was chosen at random from the standard stimulus, and both 100ms longer and shorter intervals.
+For the first 150 trials, the trigger stimulus always occured after a 1.8 s from the start of the trial, in order for subjects to come to expect the stimulus after this interval.
+In the last 250 trials, the interval was chosen at random from the standard interval, and both 100 ms longer and shorter intervals.
+The interval lengths were chosen such that enough time passed between start of the trial and stimulus onset to allow the beta power to build up to its peak within the interval \cite<see>{kononowicz_beta_2014}.
 
-In line with the findings of \citeA{karlin_reaction_1959, drazin_effects_1961, grosjean_timing_2001}, reaction times were hypothesized to be slower for the shorter interval, and faster on trials with the longer interval.
+In line with the findings of \citeA{grosjean_timing_2001}, reaction times were hypothesized to be slower for the shorter interval, and faster on trials with the longer interval.
 
 In addition, we expected reaction times to be faster in trials where beta power is low, because participants hypothetically estimate the interval to end sooner than it actually does, and are thus very ready to respond when the stimulus finally does occur.
 Conversely, in trials with high beta power, participants should estimate the stimulus to occur later than it does, and thus not be prepared for it when it actually occurs, leading to a slower reaction time.
