--- a/references.bib
+++ b/references.bib
@@ -129,6 +129,23 @@
 	file = {EBSCO Full Text:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/BW9K7TK8/Bindra and Waksberg - 1956 - Methods and terminology in studies of time estimat.pdf:application/pdf}
 }
 
+@article{boehm_trial-by-trial_2014,
+	title = {Trial-by-trial fluctuations in {CNV} amplitude reflect anticipatory adjustment of response caution},
+	volume = {96},
+	issn = {1053-8119},
+	url = {http://www.sciencedirect.com/science/article/pii/S1053811914002249},
+	doi = {10.1016/j.neuroimage.2014.03.063},
+	abstract = {The contingent negative variation, a slow cortical potential, occurs when humans are warned by a stimulus about an upcoming task. The cognitive processes that give rise to this {EEG} potential are not yet well understood. To explain these processes, we adopt a recently developed theoretical framework from the area of perceptual decision-making. This framework assumes that the basal ganglia control the tradeoff between fast and accurate decision-making in the cortex. It suggests that an increase in cortical excitability serves to lower response caution, which results in faster but more error prone responding. We propose that the {CNV} reflects this increased cortical excitability. To test this hypothesis, we conducted an {EEG} experiment in which participants performed the random dot motion task either under speed or under accuracy stress. Our results show that trial-by-trial fluctuations in participants' response speed as well as model-based estimates of response caution correlated with single-trial {CNV} amplitude under conditions of speed but not accuracy stress. We conclude that the {CNV} might reflect adjustments of response caution, which serves to enhance quick decision-making.},
+	urldate = {2014-07-10},
+	journal = {{NeuroImage}},
+	author = {Boehm, Udo and van Maanen, Leendert and Forstmann, Birte and van Rijn, Hedderik},
+	month = aug,
+	year = {2014},
+	keywords = {{CNV}, {EEG}, Linear ballistic accumulation, Response caution, Slow wave potentials, speed-accuracy tradeoff},
+	pages = {95--105},
+	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/3BXEJIAN/Boehm et al. - 2014 - Trial-by-trial fluctuations in CNV amplitude refle.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/8ENKBR84/S1053811914002249.html:text/html}
+}
+
 @article{buhusi_what_2005,
 	title = {What makes us tick? Functional and neural mechanisms of interval timing},
 	volume = {6},
@@ -221,6 +238,58 @@
 	pmid = {23175824},
 	pages = {16704--16715},
 	file = {Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/R2N8V3H5/Coull et al. - 2012 - Dopamine Precursor Depletion Impairs Timing in Hea.pdf:application/pdf;Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/A6GNXVR9/16704.html:text/html}
+}
+
+@article{coull_dissociating_2008,
+	title = {Dissociating explicit timing from temporal expectation with {fMRI}},
+	volume = {18},
+	issn = {0959-4388},
+	doi = {10.1016/j.conb.2008.07.011},
+	abstract = {Explicit timing is engaged whenever subjects make a deliberate estimate of discrete duration in order to compare it with a previously memorised standard. Conversely, implicit timing is engaged, even without a specific instruction to time, whenever sensorimotor information is temporally structured and can be used to predict the duration of future events. Both emergent timing (motor) and temporal expectation (perceptual) are forms of implicit timing. Recent {fMRI} studies demonstrate discrete neural substrates for explicit and implicit timing. Specifically, basal ganglia are activated almost invariably by explicit timing, with co-activation of prefrontal, premotor and cerebellar areas being more context-dependent. Conversely, implicit perceptual timing (or "temporal expectation") recruits cortical action circuits, comprising inferior parietal and premotor areas, highlighting its role in the optimisation of prospective behaviour.},
+	language = {eng},
+	number = {2},
+	journal = {Current Opinion in Neurobiology},
+	author = {Coull, Jt and Nobre, Ac},
+	month = apr,
+	year = {2008},
+	pmid = {18692573},
+	keywords = {Basal ganglia, Cerebellum, Functional Laterality, Humans, Magnetic Resonance Imaging, Memory, Motor cortex, Neural Pathways, Reaction Time, Time perception},
+	pages = {137--144}
+}
+
+@article{coull_dissociating_2008-1,
+	title = {Dissociating explicit timing from temporal expectation with {fMRI}},
+	volume = {18},
+	issn = {0959-4388},
+	doi = {10.1016/j.conb.2008.07.011},
+	abstract = {Explicit timing is engaged whenever subjects make a deliberate estimate of discrete duration in order to compare it with a previously memorised standard. Conversely, implicit timing is engaged, even without a specific instruction to time, whenever sensorimotor information is temporally structured and can be used to predict the duration of future events. Both emergent timing (motor) and temporal expectation (perceptual) are forms of implicit timing. Recent {fMRI} studies demonstrate discrete neural substrates for explicit and implicit timing. Specifically, basal ganglia are activated almost invariably by explicit timing, with co-activation of prefrontal, premotor and cerebellar areas being more context-dependent. Conversely, implicit perceptual timing (or "temporal expectation") recruits cortical action circuits, comprising inferior parietal and premotor areas, highlighting its role in the optimisation of prospective behaviour.},
+	language = {eng},
+	number = {2},
+	journal = {Current Opinion in Neurobiology},
+	author = {Coull, Jt and Nobre, Ac},
+	month = apr,
+	year = {2008},
+	pmid = {18692573},
+	keywords = {Basal ganglia, Cerebellum, Functional Laterality, Humans, Magnetic Resonance Imaging, Memory, Motor cortex, Neural Pathways, Reaction Time, Time perception},
+	pages = {137--144}
+}
+
+@article{coull_dissociating_2008-2,
+	series = {Cognitive neuroscience},
+	title = {Dissociating explicit timing from temporal expectation with {fMRI}},
+	volume = {18},
+	issn = {0959-4388},
+	url = {http://www.sciencedirect.com/science/article/pii/S095943880800069X},
+	doi = {10.1016/j.conb.2008.07.011},
+	abstract = {Explicit timing is engaged whenever subjects make a deliberate estimate of discrete duration in order to compare it with a previously memorised standard. Conversely, implicit timing is engaged, even without a specific instruction to time, whenever sensorimotor information is temporally structured and can be used to predict the duration of future events. Both emergent timing (motor) and temporal expectation (perceptual) are forms of implicit timing. Recent {fMRI} studies demonstrate discrete neural substrates for explicit and implicit timing. Specifically, basal ganglia are activated almost invariably by explicit timing, with co-activation of prefrontal, premotor and cerebellar areas being more context-dependent. Conversely, implicit perceptual timing (or “temporal expectation”) recruits cortical action circuits, comprising inferior parietal and premotor areas, highlighting its role in the optimisation of prospective behaviour.},
+	number = {2},
+	urldate = {2014-07-08},
+	journal = {Current Opinion in Neurobiology},
+	author = {Coull, JT and Nobre, AC},
+	month = apr,
+	year = {2008},
+	pages = {137--144},
+	file = {ScienceDirect Full Text PDF:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/38S5GRAR/Coull and Nobre - 2008 - Dissociating explicit timing from temporal expecta.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/UNC7DSUQ/S095943880800069X.html:text/html}
 }
 
 @article{creelman_human_1961,
@@ -444,7 +513,7 @@ Lateralized suppression of beta power prior to externally generated movements is
 }
 
 @article{joundi_persistent_2013,
-	title = {Persistent suppression of subthalamic beta-band activity during rhythmic finger tapping in Parkinson’s disease},
+	title = {Persistent suppression of subthalamic beta-band activity during rhythmic finger tapping in Parkinson's disease},
 	volume = {124},
 	issn = {1388-2457},
 	url = {http://www.sciencedirect.com/science/article/pii/S1388245712006499},
@@ -516,6 +585,60 @@ Voluntary movement is accompanied by changes in the degree to which neurons in t
 	keywords = {foreperiod distributions, foreperiod duration, peak level, Reaction Time, stimulus duration, Stimulus Intervals},
 	pages = {505--509},
 	file = {EBSCO Full Text:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/4XMHDZRU/Karlin - 1966 - Development of readiness to respond during short f.pdf:application/pdf}
+}
+
+@article{karmarkar_telling_2007,
+	title = {Telling time in the absence of clocks.},
+	volume = {53},
+	issn = {0896-6273},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1857310/},
+	doi = {10.1016/j.neuron.2007.01.006},
+	abstract = {Decisions based on the timing of sensory events are fundamental to sensory processing. However, the mechanisms by which the brain measures time over ranges of milliseconds to seconds remain unknown. The dominant model of temporal processing proposes that an oscillator emits events that are integrated to provide a linear metric of time. We examine an alternate model in which cortical networks are inherently able to tell time as a result of time-dependent changes in network state. Using computer simulations we show that within this framework, there is no linear metric of time, and that a given interval is encoded in the context of preceding events. Human psychophysical studies were used to examine the predictions of the model. Our results provide theoretical and experimental evidence that for short intervals there is no linear metric of time, and that time may be encoded in the high-dimensional state of local neural networks.},
+	number = {3},
+	urldate = {2014-07-08},
+	journal = {Neuron},
+	author = {Karmarkar, Uma R. and Buonomano, Dean V.},
+	month = feb,
+	year = {2007},
+	pmid = {17270738},
+	pmcid = {PMC1857310},
+	pages = {427--438}
+}
+
+@article{karmarkar_telling_2007-1,
+	title = {Telling time in the absence of clocks.},
+	volume = {53},
+	issn = {0896-6273},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1857310/},
+	doi = {10.1016/j.neuron.2007.01.006},
+	abstract = {Decisions based on the timing of sensory events are fundamental to sensory processing. However, the mechanisms by which the brain measures time over ranges of milliseconds to seconds remain unknown. The dominant model of temporal processing proposes that an oscillator emits events that are integrated to provide a linear metric of time. We examine an alternate model in which cortical networks are inherently able to tell time as a result of time-dependent changes in network state. Using computer simulations we show that within this framework, there is no linear metric of time, and that a given interval is encoded in the context of preceding events. Human psychophysical studies were used to examine the predictions of the model. Our results provide theoretical and experimental evidence that for short intervals there is no linear metric of time, and that time may be encoded in the high-dimensional state of local neural networks.},
+	number = {3},
+	urldate = {2014-07-08},
+	journal = {Neuron},
+	author = {Karmarkar, Uma R. and Buonomano, Dean V.},
+	month = feb,
+	year = {2007},
+	pmid = {17270738},
+	pmcid = {PMC1857310},
+	pages = {427--438}
+}
+
+@article{kilavik_ups_2013,
+	series = {Special Issue: Neuronal oscillations in movement disorders},
+	title = {The ups and downs of beta oscillations in sensorimotor cortex},
+	volume = {245},
+	issn = {0014-4886},
+	url = {http://www.sciencedirect.com/science/article/pii/S0014488612003767},
+	doi = {10.1016/j.expneurol.2012.09.014},
+	abstract = {Since the first descriptions of sensorimotor rhythms by Berger (1929) and by Jasper and Penfield (1949), the potential role of beta oscillations ({\textasciitilde} 13–30 Hz) in the brain has been intensely investigated. We start this review by showing that experimental studies in humans and monkeys have reached a consensus on the facts that sensorimotor beta power is low during movement, transiently increases after movement end (the “beta rebound”) and tonically increases during object grasping. Recently, a new surge of studies exploiting more complex sensorimotor tasks including multiple events, such as instructed delay tasks, reveal novel characteristics of beta oscillatory activity. We therefore proceed by critically reviewing also this literature to understand whether modulations of beta oscillations in task epochs other than those during and after movement are consistent across studies, and whether they can be reconciled with a role for beta oscillations in sensorimotor transmission. We indeed find that there are additional processes that also strongly affect sensorimotor beta oscillations, such as visual cue anticipation and processing, fitting with the view that beta oscillations reflect heightened sensorimotor transmission beyond somatosensation. However, there are differences among studies, which may be interpreted more readily if we assume multiple processes, whose effects on the overall measured beta power overlap in time. We conclude that beta oscillations observed in sensorimotor cortex may serve large-scale communication between sensorimotor and other areas and the periphery.},
+	urldate = {2014-07-10},
+	journal = {Experimental Neurology},
+	author = {Kilavik, Bjørg Elisabeth and Zaepffel, Manuel and Brovelli, Andrea and MacKay, William A. and Riehle, Alexa},
+	month = jul,
+	year = {2013},
+	keywords = {Beta oscillations, Human {EEG}, Monkey {LFP}, Sensorimotor cortex},
+	pages = {15--26},
+	file = {1-s2.0-S0014488612003767-main.pdf:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/I3JNMRV8/1-s2.0-S0014488612003767-main.pdf:application/pdf;ScienceDirect Snapshot:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/25E5KGW3/S0014488612003767.html:text/html}
 }
 
 @article{kononowicz_tonic_2014,
@@ -1024,6 +1147,40 @@ Finally, four factors are proposed as exerting an influence on the relationship 
 	keywords = {childhood development, Psychoanalytic Interpretation, temporal experience, Time, Time perception, time perspective},
 	pages = {213--236},
 	file = {EBSCO Full Text:/home/max/.mozilla/firefox/cq0juvrm.default/zotero/storage/8ANJ5DQW/Wallace and Rabin - 1960 - Temporal experience.pdf:application/pdf}
+}
+
+@article{webb_regulation_2014,
+	series = {Circadian Rhythms in Behavioral Neuroscience},
+	title = {Regulation of circadian rhythms in mammals by behavioral arousal},
+	volume = {128},
+	issn = {0735-7044},
+	url = {http://search.ebscohost.com.proxy-ub.rug.nl/login.aspx?direct=true&db=psyh&AN=2014-15038-001&site=ehost-live&scope=site},
+	abstract = {Circadian rhythms in most mammals are synchronized to local time by phase and period resetting actions of daily light–dark cycles on a retino-recipient, light-entrainable circadian pacemaker, the suprachiasmatic nucleus ({SCN}). The {SCN} receives input from other brain regions, some of which mediate the phase and period resetting actions of behavioral arousal on circadian rhythms. We review historical milestones in the discovery of so-called “nonphotic” circadian clock resetting induced by environmentally stimulated arousal, or by feedback from clock-controlled rest–activity cycles. Topics include species generality, interactions between concurrent or successive photic and nonphotic inputs to the circadian clock, neural pathways, neurotransmitters, and clock cell responses that mediate resetting by behavioral arousal. The role of behavioral inputs to the circadian clock in determining the phase of entrainment to local time in natural environments is not well understood. Nonetheless, nonphotic effects are of sufficient magnitude to raise issues for the design of experiments in behavioral neuroscience (any procedure that is sufficiently arousing may alter the timing of circadian clocks that regulate dependent variables of primary interest). Nonphotic inputs to the clock may be exploited in strategies to reset or strengthen circadian rhythms in humans. ({PsycINFO} Database Record (c) 2014 {APA}, all rights reserved). (journal abstract)},
+	number = {3},
+	urldate = {2014-07-08},
+	journal = {Behavioral Neuroscience},
+	author = {Webb, Ian C. and Antle, Michael C. and Mistlberger, Ralph E.},
+	month = jun,
+	year = {2014},
+	keywords = {Animal Circadian Rhythms, arousal, Behavioral Neuroscience, circadian rhythms, entrainment, Human Biological Rhythms, Mammals, neuropeptide Y, phase shift, Physiological Arousal, serotonin, suprachiasmatic nucleus},
+	pages = {304--325}
+}
+
+@article{webb_regulation_2014-1,
+	series = {Circadian Rhythms in Behavioral Neuroscience},
+	title = {Regulation of circadian rhythms in mammals by behavioral arousal},
+	volume = {128},
+	issn = {0735-7044},
+	url = {http://search.ebscohost.com.proxy-ub.rug.nl/login.aspx?direct=true&db=psyh&AN=2014-15038-001&site=ehost-live&scope=site},
+	abstract = {Circadian rhythms in most mammals are synchronized to local time by phase and period resetting actions of daily light–dark cycles on a retino-recipient, light-entrainable circadian pacemaker, the suprachiasmatic nucleus ({SCN}). The {SCN} receives input from other brain regions, some of which mediate the phase and period resetting actions of behavioral arousal on circadian rhythms. We review historical milestones in the discovery of so-called “nonphotic” circadian clock resetting induced by environmentally stimulated arousal, or by feedback from clock-controlled rest–activity cycles. Topics include species generality, interactions between concurrent or successive photic and nonphotic inputs to the circadian clock, neural pathways, neurotransmitters, and clock cell responses that mediate resetting by behavioral arousal. The role of behavioral inputs to the circadian clock in determining the phase of entrainment to local time in natural environments is not well understood. Nonetheless, nonphotic effects are of sufficient magnitude to raise issues for the design of experiments in behavioral neuroscience (any procedure that is sufficiently arousing may alter the timing of circadian clocks that regulate dependent variables of primary interest). Nonphotic inputs to the clock may be exploited in strategies to reset or strengthen circadian rhythms in humans. ({PsycINFO} Database Record (c) 2014 {APA}, all rights reserved). (journal abstract)},
+	number = {3},
+	urldate = {2014-07-08},
+	journal = {Behavioral Neuroscience},
+	author = {Webb, Ian C. and Antle, Michael C. and Mistlberger, Ralph E.},
+	month = jun,
+	year = {2014},
+	keywords = {Animal Circadian Rhythms, arousal, Behavioral Neuroscience, circadian rhythms, entrainment, Human Biological Rhythms, Mammals, neuropeptide Y, phase shift, Physiological Arousal, serotonin, suprachiasmatic nucleus},
+	pages = {304--325}
 }
 
 @article{wiener_parietal_2012,
