part of discussion

--- a/main.tex
+++ b/main.tex
@@ -148,6 +148,42 @@ Conversely, in trials with high beta power, participants should estimate the sti
 \end{table}
 
 \section{Discussion}
+
+%%%%% Points to include
+% solid effect of interval length
+%   timing plays a role in RT
+%     grosjean, karlin, drazin replicated/extended
+%     -> robust effect
+%
+% no effect of beta
+%   implicit vs explicit timing
+%   internal vs external cues
+%     coull & nobre 2008
+%       Implicit timing; Exogenous temporal expectations
+%         parietal cortex and cerebellum
+%       Explicit timing; motor timing
+%         Basal ganglia -> where joundi 2013 found beta suppression during tapping
+
+% !! coull 2008 -> explicit/implicit different
+% coull 2011 -> internal/external same
+%
+% ! näätäänen hazard function (foreperiod etc)
+
+% Hazard function: conditional probability that a target will occur at a particular time, given that it has not already occurred (Coull 2008)
+
+The first of our hypotheses, predicting that reaction times will be slower in trials with a short interval, and faster in trials with a long interval, was clearly supported by the data.
+With the short and long intervals leading to a 25 ms and a 17 ms difference in reaction time to the standard condition, respectively, this effect is very substantial given that the difference between the groups was only 100 ms.
+
+Our second hypothesis, that beta power will correlate positively with reaction time, was not confirmed.
+In fact, Bayesian analyses even suggest that it does not have any value as a predictor of reaction time.
+This finding can be interpreted using the taxonomy proposed by \citeA{coull_dissociating_2008}.
+\citeA{kononowicz_beta_2014}'s task required motor timing, a form of explicit timing that has been shown to be associated with activation of the basal ganglia \cite{coull_dissociating_2008}.
+The present study, however, uses a task involving implicit timing; more specifically, exogenous temporal expectations, which involve multiple different brain areas, but not the basal ganglia \cite{coull_dissociating_2008}.
+As the beta power that is associated with timing functions has been described as originating from the basal ganglia, and only in studies employing explicit timing tasks \cite<e.g.>{joundi_persistent_2013, bartolo_information_2014}, it is plausible that beta power does not index the implicit timing required for the present study.
+Thus, our finding that beta power is not suited as a predictor of reaction time reinforces the idea proposed by \citeA{coull_dissociating_2008} that implicit and explicit timing employ different neural structures.
+
+%%%%% Hedderik to Simon
+
 % no separate future research section; include in into rest of text if at all
 
 % talk about both internal/external cues & explicit/implicit timing
